terraform-ecs-project/alb.tf
# ---------------- APPLICATION LOAD BALANCER ----------------

resource "aws_lb" "main" {
  name                       = "sid1901-alb"
  internal                   = false
  load_balancer_type         = "application"
  drop_invalid_header_fields = true

  security_groups = [aws_security_group.alb_sg.id]

  subnets = [
    aws_subnet.public_1.id,
    aws_subnet.public_2.id
  ]

  tags = {
    Name = "sid1901-alb"
  }
}

# ---------------- TARGET GROUP ----------------

resource "aws_lb_target_group" "tg" {
  name     = "sid1901-target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }

  tags = {
    Name = "sid1901-target-group"
  }
}

# ---------------- HTTP LISTENER (port 80) ----------------

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }
}
