terraform-ecs-project/security.tf
# ---------------- ALB SECURITY GROUP ----------------

resource "aws_security_group" "alb_sg" {
  name   = "sid1901-alb-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sid1901-alb-sg"
  }
}

# ---------------- ECS SECURITY GROUP ----------------

resource "aws_security_group" "ecs_sg" {
  name   = "sid1901-ecs-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sid1901-ecs-sg"
  }
}

# ---------------- RDS SECURITY GROUP ----------------

resource "aws_security_group" "rds_sg" {
  name   = "sid1901-rds-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sid1901-rds-sg"
  }
}
